# calenderizer

./: .gitignore  LICENSE  README.md  ics-generator.py  log.sh  pyproject.toml  requirements.txt  schedule.json  setup.sh  test_schedule.json
src/calenderizer/: calendar_viewer.py  ics_generator.py
tests/: __init__.py  test_calendar.py  test_calendar_generator.py
